--- a/exercicio1/main.ipynb
+++ b/exercicio1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Agrupar dados por Classe e Gênero e calcular estatísticas descritivas para a idade\n",
+      "Distribuição de Idade por Gênero e Classe Social\n",
       "\n",
       "               count       mean        std   min     25%   50%    75%   max\n",
       "Pclass Sex                                                                 \n",
@@ -64,7 +64,7 @@
    "source": [
     "### 1. Distribuição de Idade por Gênero e Classe Social\n",
     "\n",
-    "print('\\nAgrupar dados por Classe e Gênero e calcular estatísticas descritivas para a idade\\n')\n",
+    "print('\\nDistribuição de Idade por Gênero e Classe Social\\n')\n",
     "\n",
     "class_sex_age_group_survived = titanic_df.groupby(['Pclass', 'Sex'])['Age'].describe()\n",
     "print(class_sex_age_group_survived)"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Calculando a taxa de sobrevivência por faixa etária\n",
+      "Taxa de sobrevivência por faixa etária\n",
       "\n",
       "AgeGroup\n",
       "Criança    0.550000\n",
@@ -125,7 +125,7 @@
     "titanic_df['AgeGroup'] = pd.cut(titanic_df['Age'], bins=[0, 16, 30, 50, 100], \n",
     "                                labels=['Criança','Jovem', 'Adulto', 'Idoso'])\n",
     "\n",
-    "print('\\nCalculando a taxa de sobrevivência por faixa etária\\n')\n",
+    "print('\\nTaxa de sobrevivência por faixa etária\\n')\n",
     "\n",
     "age_group_survived = titanic_df.groupby('AgeGroup', observed=False)['Survived'].mean()\n",
     "print(age_group_survived)"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
