--- a/exercicio3/main.ipynb
+++ b/exercicio3/main.ipynb
@@ -47,8 +47,8 @@
     "# valores aleatórios de temperaturas com o centro em 15ºC\n",
     "\n",
     "# np.random.normal(loc, scale, size)\n",
-    "temp = np.random.normal(15,10,120)\n",
-    "print(temp)"
+    "temperaturas = np.random.normal(15,10,120)\n",
+    "print(temperaturas)"
    ]
   },
   {
@@ -57,9 +57,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# média anual, desvio padrão e percentis (25%,50%,75%)\n",
+    "# Cálculo de estatísticas anuais\n",
+    "anos = 10\n",
+    "meses = 12\n",
+    "temperaturas_ano = temperaturas.reshape(anos, meses)\n",
     "\n",
-    "# temperaturas anômalas (2 desvios padrão acima ou abaixo da média anual)"
+    "print(temperaturas_ano)\n",
+    "\n",
+    "media_anual = np.mean(temperaturas_ano, axis=1)\n",
+    "desvio_padrao_anual = np.std(temperaturas_ano, axis=1)\n",
+    "\n",
+    "print(\"Média Anual (por ano):\", media_anual)\n",
+    "print(\"Desvio Padrão Anual (por ano):\", desvio_padrao_anual)\n",
+    "\n",
+    "media_geral = np.mean(temperaturas)\n",
+    "desvio_padrao_geral = np.std(temperaturas)\n",
+    "\n",
+    "print(\"Média Geral:\", media_geral)\n",
+    "print(\"Desvio Padrão Geral:\", desvio_padrao_geral)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Estatísticas gerais\n",
+    "percentil_25 = np.percentile(temperaturas, 25)\n",
+    "percentil_50 = np.percentile(temperaturas, 50)\n",
+    "percentil_75 = np.percentile(temperaturas, 75)\n",
+    "\n",
+    "print(\"Percentil 25%:\", percentil_25)\n",
+    "print(\"Percentil 50% (Mediana):\", percentil_50)\n",
+    "print(\"Percentil 75%:\", percentil_75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Detecção de anomalias\n",
+    "limite_inferior = media_geral - 2 * desvio_padrao_geral\n",
+    "limite_superior = media_geral + 2 * desvio_padrao_geral\n",
+    "anomalias = np.where((temperaturas < limite_inferior) | (temperaturas > limite_superior))[0]\n",
+    "\n",
+    "# Exibindo os resultados\n",
+    "\n",
+    "print(\"Meses com anomalias (índice):\", anomalias)"
    ]
   },
   {
